--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.show_sql=true
 spring.h2.console.enabled=true
 
-spring.datasource.url=jdbc:h2:file:C:/Users/JRhome/Documents/memoryData;MODE=mysql;
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=mysql;
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
